--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-clearml == 1.0.5
-google-cloud-storage==1.41
-numpy == 1.19.5
-opencv_python_headless == 4.5.1.48
+setuptools==59.5.0
+clearml
+google-cloud-storage
+numpy
+opencv_python_headless
 pytorch_lightning
-torch == 1.10.0
-torchmetrics >= 0.4.0
-torchvision == 0.11.1
-albumentations == 1.0.3
-optuna == 2.10.0
+torch
+torchvision
+albumentations
